component-library/src/components/custom/BccBadge/BccBadge.css
@layer components {
	.bcc-badge {
		@apply inline-flex shrink-0 items-center justify-center gap-1 rounded-full leading-none whitespace-nowrap;

		@apply bg-ctx text-ctx;
	}
	.bcc-badge.gradient {
		@apply ctx-gradient;
	}
	.bcc-badge.sm {
		@apply heading-xs h-4 w-4;
	}
	.bcc-badge.md {
		@apply heading-sm h-5 w-5;
	}
	.bcc-badge.lg {
		@apply heading-md h-6 w-6;
	}
	.bcc-badge.xl {
		@apply heading-md h-8 w-8;
	}

	.bcc-badge .bcc-badge-icon {
		@apply size-4;
	}
	.bcc-badge.lg .bcc-badge-icon {
		@apply size-5;
	}
	.bcc-badge.xl .bcc-badge-icon {
		@apply size-6;
	}

	.bcc-badge.bcc-badge-text {
		@apply w-auto px-2;
	}
	.bcc-badge-text.lg,
	.bcc-badge-text.xl {
		@apply px-3;
	}
	.bcc-badge-text.border.lg,
	.bcc-badge-text.border.xl {
		@apply px-2;
	}
	.bcc-badge-text.bordered.lg,
	.bcc-badge-text.bordered.xl {
		@apply px-1;
	}

	.bcc-badge.border {
		@apply border-1;
		border-color: var(--ctx-background-pressed);
	}

	.bcc-badge.bordered {
		@apply border-2;
		border-color: var(--ctx-background-pressed);
	}

	.bcc-badge.squared {
		@apply rounded-sm;
	}
}

